# cmake_examples

./: README.md  standerd_example.md
more_lib_src_1/: CMakeLists.txt
more_lib_src_1/sub/: sub.cpp  sub.h
more_lib_src_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  start
more_lib_src_2/add/: CMakeLists.txt  Makefile  add.cpp  cmake_install.cmake
more_lib_src_2/sub/: CMakeLists.txt  Makefile  cmake_install.cmake
more_source_file/: CMakeLists.txt  main.cpp
simple_form/: CMakeLists.txt
simple_form/include/: hello.h
simple_form/src/: hello.cpp  main.cpp
single_source_file/: CMakeLists.txt  main.cpp
standerd_form/: CMakeLists.txt
standerd_form/include/: add.h  main.h
standerd_form/src/: CMakeLists.txt  add.cpp  main.cpp
